# VoxelForge

./: .gitignore  DESIGN-INSTRUCTIONS.md  README.md  run.py
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  pricing.py  schemas.py  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/app/components/forge/: CommandPalette.tsx  ForgeViewport.tsx  Logo.tsx  MaterialChip.tsx  Nav.tsx  ParamSlider.tsx  QuoteBar.tsx  RequireRole.tsx  SmoothScroll.tsx  ThemeToggle.tsx  TitleBlockFooter.tsx  Viewport3D.tsx  primitives.tsx
frontend/src/app/components/ui/: sonner.tsx
frontend/src/app/lib/: api.ts  catalog.ts  geometry.ts  materials.ts  meshio.ts  pricing.ts  store.tsx
frontend/src/app/pages/: Account.tsx  Auth.tsx  Cart.tsx  Checkout.tsx  Configurator.tsx  Landing.tsx  Materials.tsx  NotFound.tsx  Operator.tsx  Preflight.tsx  Track.tsx  Upload.tsx
frontend/src/imports/: AGENTS.md  README.md
frontend/src/styles/: fonts.css  theme.css
