[project]
name = "voxelforge-backend"
version = "0.1.0"
description = "VoxelForge API — pricing, catalog, uploads, pre-flight and agent surfaces."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[tool.uvicorn]
app = "app.main:app"
